application/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fm-compta-consulting-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fm-compta-consulting-backend
  template:
    metadata:
      labels:
        app: fm-compta-consulting-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/rolandsebastien/fm-compta-consulting-backend:74c0a334d8ac4a66778a8874eb0369331192223f
          ports:
            - containerPort: 3001
