application/manifests/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fm-compta-consulting-database
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fm-compta-consulting-database
  template:
    metadata:
      labels:
        app: fm-compta-consulting-database
    spec:
      containers:
        - name: mongo
          image: mongo:5.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
            - name: mongo-init-scripts
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
        - name: mongo-init-scripts
          configMap:
            name: mongo-init-scripts
