application/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fm-compta-consulting-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fm-compta-consulting-frontend
  template:
    metadata:
      labels:
        app: fm-compta-consulting-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/rolandsebastien/fm-compta-consulting-frontend:74c0a334d8ac4a66778a8874eb0369331192223f
          ports:
            - containerPort: 3000
